--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                 </a>
             </div>
             <div class="work__gallery-card">
+                <a href="./images/tomoe.png" data-lightbox="models" data-title="Caption9">
+                    <img class="portfolio__img" src="./images/tomoe.png" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
                 <a href="./images/Alice.png" data-lightbox="models" data-title="Caption8">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
