--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <ul class="sci">
                 <div class="sci-title">Contact me:</div>
                 <div class="sci__row">
-                    <li><a href="tel:380679091028" class="fa fa-phone fa-2x"></a></li>
-                    <li><a href="https://www.linkedin.com/in/maksym-fadeev-08b584246/" class="fa fa-linkedin fa-2x"></a>
+                    <li><a href="tel:380976259502" class="fa fa-phone fa-2x"></a></li>
+                    <li><a href="https://www.linkedin.com/in/tania-fadeeva-b67190247/" class="fa fa-linkedin fa-2x"></a>
                     </li>
-                    <li><a href="mailto:marsiknamasrse@gmail.com" class="fa fa-google fa-2x"></a></li>
-                    <li><a href="https://t.me/fadeev_m_m" class="fa fa-telegram fa-2x"></a></li>
+                    <li><a href="mailto:halvathebest1@gmail.com" class="fa fa-google fa-2x"></a></li>
+                    <li><a href="https://t.me/Fadiooccccaaaa" class="fa fa-telegram fa-2x"></a></li>
                 </div>
             </ul>
         </div>
