--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
 
         <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=Caption1"><img
+                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=1"><img
                         class="portfolio__img" src="./images/game cookie.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/fox.png" data-lightbox="models" data-title="Caption2"><img class="portfolio__img"
+                <a href="./images/fox.png" data-lightbox="models" data-title="2"><img class="portfolio__img"
                         src="./images/fox.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/land.png" data-lightbox="models" data-title="Caption3"><img class="portfolio__img"
+                <a href="./images/land.png" data-lightbox="models" data-title="3"><img class="portfolio__img"
                         src="./images/land.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/enot.png" data-lightbox="models" data-title="Caption4">
+                <a href="./images/enot.png" data-lightbox="models" data-title="4">
                     <img class="portfolio__img" src="./images/enot.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/room copy.png" data-lightbox="models" data-title="Caption4"><img
+                <a href="./images/room copy.png" data-lightbox="models" data-title="5"><img
                         class="portfolio__img" src="./images/room copy.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/cat.png" data-lightbox="models" data-title="Caption4"><img class="portfolio__img"
+                <a href="./images/cat.png" data-lightbox="models" data-title="6"><img class="portfolio__img"
                         src="./images/cat.png" alt="#">
                 </a>
             </div>
@@ -92,28 +92,33 @@
 
         <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/djon.jpg" data-lightbox="models" data-title="1Caption7">
+                <a href="./images/djon.jpg" data-lightbox="models" data-title="7">
                     <img class="portfolio__img" src="./images/djon.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/tomoe.png" data-lightbox="models" data-title="Caption9">
+                <a href="./images/tomoe.png" data-lightbox="models" data-title="8">
                     <img class="portfolio__img" src="./images/tomoe.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title="Caption8">
+                <a href="./images/Alice.png" data-lightbox="models" data-title="9">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="Caption9">
+                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="10">
                     <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="Caption9">
+                <a href="./images/man.jpg" data-lightbox="models" data-title="11">
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="12">
+                    <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
                 </a>
             </div>
 
