--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section class="education lazy-load" id="education">
+  <!--   <section class="education lazy-load" id="education">
         <div class="title">
             <h2>Education</h2>
         </div>
@@ -46,7 +46,7 @@
                 <p>Design Faculty of Design</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="work lazy-load" id="work">
         <div class="title">
@@ -82,6 +82,11 @@
             <div class="work__gallery-card">
                 <a href="./images/cat.png" data-lightbox="models" data-title="6"><img class="portfolio__img"
                         src="./images/cat.png" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="6"><img class="portfolio__img"
+                        src="./images/Dwarf-3d.jpg" alt="#">
                 </a>
             </div>
         </div>
