Update+new work

--- a/index.html
+++ b/index.html
@@ -102,31 +102,35 @@
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/tomoe.png" data-lightbox="models" data-title="8">
+                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="8">
+                    <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/elf.jpg" data-lightbox="models" data-title="9">
+                    <img class="portfolio__img" src="./images/elf.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/tomoe.png" data-lightbox="models" data-title="10">
                     <img class="portfolio__img" src="./images/tomoe.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title="9">
+                <a href="./images/Alice.png" data-lightbox="models" data-title=11">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="10">
+                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="12">
                     <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="11">
+                <a href="./images/man.jpg" data-lightbox="models" data-title="13">
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
                 </a>
             </div>
-            <div class="work__gallery-card">
-                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="12">
-                    <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
-                </a>
-            </div>
-
 
         </div>
         </div>
