--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-  <!--   <section class="education lazy-load" id="education">
+    <!--   <section class="education lazy-load" id="education">
         <div class="title">
             <h2>Education</h2>
         </div>
@@ -55,40 +55,46 @@
 
         <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=1"><img
-                        class="portfolio__img" src="./images/game cookie.jpg" alt="#">
+                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=1"><img class="portfolio__img"
+                        src="./images/game cookie.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/fox.png" data-lightbox="models" data-title="2"><img class="portfolio__img"
+                <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="2"><img class="portfolio__img"
+                        src="./images/Dwarf-3d.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/Elf-3d.jpg" data-lightbox="models" data-title="3"><img class="portfolio__img"
+                        src="./images/Elf-3d.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/fox.png" data-lightbox="models" data-title="4"><img class="portfolio__img"
                         src="./images/fox.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/land.png" data-lightbox="models" data-title="3"><img class="portfolio__img"
+                <a href="./images/land.png" data-lightbox="models" data-title="5"><img class="portfolio__img"
                         src="./images/land.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/enot.png" data-lightbox="models" data-title="4">
+                <a href="./images/enot.png" data-lightbox="models" data-title="6">
                     <img class="portfolio__img" src="./images/enot.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/room copy.png" data-lightbox="models" data-title="5"><img
-                        class="portfolio__img" src="./images/room copy.png" alt="#">
+                <a href="./images/room copy.png" data-lightbox="models" data-title="7"><img class="portfolio__img"
+                        src="./images/room copy.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/cat.png" data-lightbox="models" data-title="6"><img class="portfolio__img"
+                <a href="./images/cat.png" data-lightbox="models" data-title="8"><img class="portfolio__img"
                         src="./images/cat.png" alt="#">
                 </a>
             </div>
-            <div class="work__gallery-card">
-                <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="6"><img class="portfolio__img"
-                        src="./images/Dwarf-3d.jpg" alt="#">
-                </a>
-            </div>
+
         </div>
 
         <div class="title" style="margin-top:80px;">
@@ -97,37 +103,37 @@
 
         <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/djon.jpg" data-lightbox="models" data-title="7">
+                <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-1">
                     <img class="portfolio__img" src="./images/djon.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="8">
+                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="2d-2">
                     <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/elf.jpg" data-lightbox="models" data-title="9">
+                <a href="./images/elf.jpg" data-lightbox="models" data-title="2d-3">
                     <img class="portfolio__img" src="./images/elf.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/tomoe.png" data-lightbox="models" data-title="10">
+                <a href="./images/tomoe.png" data-lightbox="models" data-title="12d-4">
                     <img class="portfolio__img" src="./images/tomoe.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title=11">
+                <a href="./images/Alice.png" data-lightbox="models" data-title=12d-5">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="12">
+                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-6">
                     <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="13">
+                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-7">
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
                 </a>
             </div>
