--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <h2>3D Works</h2>
         </div>
 
-        <div class="work__gallery">
+        <div class="work__gallery" >
             <div class="work__gallery-card">
                 <a href="./images/game cookie.jpg" data-lightbox="models" data-title=1"><img class="portfolio__img"
                         src="./images/game cookie.jpg" alt="#">
                 </a>
             </div>
-            <div class="work__gallery-card">
+            <div class="work__gallery-card" >
                 <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="2"><img class="portfolio__img"
                         src="./images/Dwarf-3d.jpg" alt="#">
                 </a>
@@ -101,7 +101,7 @@
             <h2>2D Works</h2>
         </div>
 
-        <div class="work__gallery">
+        <div class="work__gallery" >
             <div class="work__gallery-card">
                 <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-1">
                     <img class="portfolio__img" src="./images/djon.jpg" alt="#">
@@ -118,22 +118,27 @@
                 </a>
             </div>
             <div class="work__gallery-card">
+                <a href="./images/mechanic-2d.jpg" data-lightbox="models" data-title=2d-5">
+                    <img class="portfolio__img" src="./images/mechanic-2d.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
                 <a href="./images/tomoe.png" data-lightbox="models" data-title="12d-4">
                     <img class="portfolio__img" src="./images/tomoe.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title=12d-5">
+                <a href="./images/Alice.png" data-lightbox="models" data-title=2d-6">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-6">
+                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-7">
                     <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-7">
+                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-8">
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
                 </a>
             </div>
