--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </section> -->
 
-    <section class="work lazy-load" id="work">
+    <section class="work" id="work">
         <div class="title">
             <h2>3D Works</h2>
         </div>
