new-3d-update_size

--- a/index.html
+++ b/index.html
@@ -53,44 +53,49 @@
             <h2>3D Works</h2>
         </div>
 
-        <div class="work__gallery" >
+        <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=1"><img class="portfolio__img"
+                <a href="./images/game cookie.jpg" data-lightbox="models" data-title=cookie"><img class="portfolio__img"
                         src="./images/game cookie.jpg" alt="#">
                 </a>
             </div>
-            <div class="work__gallery-card" >
-                <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="2"><img class="portfolio__img"
+            <div class="work__gallery-card">
+                <a href="./images/Dwarf-3d.jpg" data-lightbox="models" data-title="Dwarf"><img class="portfolio__img"
                         src="./images/Dwarf-3d.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Elf-3d.jpg" data-lightbox="models" data-title="3"><img class="portfolio__img"
+                <a href="./images/aztec-3d.jpg" data-lightbox="models" data-title="aztec"><img class="portfolio__img"
+                        src="./images/aztec-3d.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/Elf-3d.jpg" data-lightbox="models" data-title="Elf"><img class="portfolio__img"
                         src="./images/Elf-3d.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/fox.png" data-lightbox="models" data-title="4"><img class="portfolio__img"
+                <a href="./images/fox.png" data-lightbox="models" data-title="fox"><img class="portfolio__img"
                         src="./images/fox.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/land.png" data-lightbox="models" data-title="5"><img class="portfolio__img"
+                <a href="./images/land.png" data-lightbox="models" data-title="land"><img class="portfolio__img"
                         src="./images/land.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/enot.png" data-lightbox="models" data-title="6">
+                <a href="./images/enot.png" data-lightbox="models" data-title="raccoon">
                     <img class="portfolio__img" src="./images/enot.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/room copy.png" data-lightbox="models" data-title="7"><img class="portfolio__img"
+                <a href="./images/room copy.png" data-lightbox="models" data-title="room"><img class="portfolio__img"
                         src="./images/room copy.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/cat.png" data-lightbox="models" data-title="8"><img class="portfolio__img"
+                <a href="./images/cat.png" data-lightbox="models" data-title="cat"><img class="portfolio__img"
                         src="./images/cat.png" alt="#">
                 </a>
             </div>
@@ -101,44 +106,49 @@
             <h2>2D Works</h2>
         </div>
 
-        <div class="work__gallery" >
+        <div class="work__gallery">
             <div class="work__gallery-card">
-                <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-1">
+                <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-djon">
                     <img class="portfolio__img" src="./images/djon.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="2d-2">
+                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="2d-Dwarf">
                     <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/elf.jpg" data-lightbox="models" data-title="2d-3">
+                <a href="./images/aztec.jpg" data-lightbox="models" data-title="2d-aztec">
+                    <img class="portfolio__img" src="./images/aztec.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/elf.jpg" data-lightbox="models" data-title="2d-elf">
                     <img class="portfolio__img" src="./images/elf.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/mechanic-2d.jpg" data-lightbox="models" data-title=2d-5">
+                <a href="./images/mechanic-2d.jpg" data-lightbox="models" data-title="2d-mechanic">
                     <img class="portfolio__img" src="./images/mechanic-2d.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/tomoe.png" data-lightbox="models" data-title="12d-4">
+                <a href="./images/tomoe.png" data-lightbox="models" data-title="2d-tomoe">
                     <img class="portfolio__img" src="./images/tomoe.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title=2d-6">
+                <a href="./images/Alice.png" data-lightbox="models" data-title="2d-Alice">
                     <img class="portfolio__img" src="./images/Alice.png" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-7">
+                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-Agirl">
                     <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-8">
+                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-man">
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
                 </a>
             </div>
