--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                         src="./images/cat.png" alt="#">
                 </a>
             </div>
+             <div class="work__gallery-card">
+                <a href="./images/WaterBox.jpg" data-lightbox="models" data-title="WaterBox"><img class="portfolio__img"
+                        src="./images/WaterBox.jpg" alt="#">
+                </a>
+            </div>
 
         </div>
 
