--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                         src="./images/WaterBox.jpg" alt="#">
                 </a>
             </div>
+            <div class="work__gallery-card">
+                <a href="./images/mechanic-3D.jpg" data-lightbox="models" data-title="mechanic-3d"><img class="portfolio__img"
+                        src="./images/mechanic-3D.jpg" alt="#">
+                </a>
 
         </div>
 
