--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
                 </a>
             </div>
             <div class="work__gallery-card">
+                <a href="./images/dragon.jpg" data-lightbox="models" data-title="2d-Dragon">
+                    <img class="portfolio__img" src="./images/dragon.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
                 <a href="./images/aztec.jpg" data-lightbox="models" data-title="2d-aztec">
                     <img class="portfolio__img" src="./images/aztec.jpg" alt="#">
                 </a>
