--- a/index.html
+++ b/index.html
@@ -166,6 +166,26 @@
                     <img class="portfolio__img" src="./images/man.jpg" alt="#">
                 </a>
             </div>
+             <div class="work__gallery-card">
+                <a href="./images/mandalor.jpg" data-lightbox="models" data-title="2d-mandalorian">
+                    <img class="portfolio__img" src="./images/mandalor.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/grogy.jpg" data-lightbox="models" data-title="2d-grogu">
+                    <img class="portfolio__img" src="./images/grogy.jpg" alt="#">
+                </a>
+            </div>
+             <div class="work__gallery-card">
+                <a href="./images/dw.jpg" data-lightbox="models" data-title="2d-deadpool&wolverine">
+                    <img class="portfolio__img" src="./images/dw.jpg" alt="#">
+                </a>
+            </div>
+            <div class="work__gallery-card">
+                <a href="./images/gofts.jpg" data-lightbox="models" data-title="2d-Mask">
+                    <img class="portfolio__img" src="./images/gofts.jpg" alt="#">
+                </a>
+            </div>
 
         </div>
         </div>
