--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
 <body>
     <section class="banner lazy-load" id="home">
-        <div class="imgSideBar">
-            <img src="./images/1.jpg" alt="#">
-        </div>
         <div class="content">
             <div>
                 <h2>Hi! I'm Tania Fadeeva</h2>
@@ -33,20 +30,6 @@
             </ul>
         </div>
     </section>
-
-    <!--   <section class="education lazy-load" id="education">
-        <div class="title">
-            <h2>Education</h2>
-        </div>
-        <div class="education__content">
-            <div class="education__card">
-                <span class="education__img fa fa-university fa-4x"></span>
-                <h2 class="education__title"> Kyiv National University of </br>Technology </h2>
-                <p style="margin-bottom: 10px;">Stydent</p>
-                <p>Design Faculty of Design</p>
-            </div>
-        </div>
-    </section> -->
 
     <section class="work" id="work">
         <div class="title">
@@ -99,97 +82,131 @@
                         src="./images/cat.png" alt="#">
                 </a>
             </div>
-             <div class="work__gallery-card">
+            <div class="work__gallery-card">
                 <a href="./images/WaterBox.jpg" data-lightbox="models" data-title="WaterBox"><img class="portfolio__img"
                         src="./images/WaterBox.jpg" alt="#">
                 </a>
             </div>
             <div class="work__gallery-card">
-                <a href="./images/mechanic-3D.jpg" data-lightbox="models" data-title="mechanic-3d"><img class="portfolio__img"
-                        src="./images/mechanic-3D.jpg" alt="#">
+                <a href="./images/mechanic-3D.jpg" data-lightbox="models" data-title="mechanic-3d"><img
+                        class="portfolio__img" src="./images/mechanic-3D.jpg" alt="#">
                 </a>
 
-        </div>
-
-        <div class="title" style="margin-top:80px;">
-            <h2>2D Works</h2>
-        </div>
-
-        <div class="work__gallery">
-            <div class="work__gallery-card">
-                <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-djon">
-                    <img class="portfolio__img" src="./images/djon.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="2d-Dwarf">
-                    <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/dragon.jpg" data-lightbox="models" data-title="2d-Dragon">
-                    <img class="portfolio__img" src="./images/dragon.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/aztec.jpg" data-lightbox="models" data-title="2d-aztec">
-                    <img class="portfolio__img" src="./images/aztec.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/elf.jpg" data-lightbox="models" data-title="2d-elf">
-                    <img class="portfolio__img" src="./images/elf.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/mechanic-2d.jpg" data-lightbox="models" data-title="2d-mechanic">
-                    <img class="portfolio__img" src="./images/mechanic-2d.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/tomoe.png" data-lightbox="models" data-title="2d-tomoe">
-                    <img class="portfolio__img" src="./images/tomoe.png" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/Alice.png" data-lightbox="models" data-title="2d-Alice">
-                    <img class="portfolio__img" src="./images/Alice.png" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-Agirl">
-                    <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/man.jpg" data-lightbox="models" data-title="2d-man">
-                    <img class="portfolio__img" src="./images/man.jpg" alt="#">
-                </a>
-            </div>
-             <div class="work__gallery-card">
-                <a href="./images/mandalor.jpg" data-lightbox="models" data-title="2d-mandalorian">
-                    <img class="portfolio__img" src="./images/mandalor.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/grogy.jpg" data-lightbox="models" data-title="2d-grogu">
-                    <img class="portfolio__img" src="./images/grogy.jpg" alt="#">
-                </a>
-            </div>
-             <div class="work__gallery-card">
-                <a href="./images/dw.jpg" data-lightbox="models" data-title="2d-deadpool&wolverine">
-                    <img class="portfolio__img" src="./images/dw.jpg" alt="#">
-                </a>
-            </div>
-            <div class="work__gallery-card">
-                <a href="./images/gofts.jpg" data-lightbox="models" data-title="2d-Mask">
-                    <img class="portfolio__img" src="./images/gofts.jpg" alt="#">
-                </a>
             </div>
 
-        </div>
-        </div>
+            <div class="title" style="margin-top:80px;">
+                <h2>2D Works</h2>
+            </div>
 
+            <div class="work__gallery">
+                <div class="work__gallery-card">
+                    <a href="./images/djon.jpg" data-lightbox="models" data-title="2d-djon">
+                        <img class="portfolio__img" src="./images/djon.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/Dwarf.jpg" data-lightbox="models" data-title="2d-Dwarf">
+                        <img class="portfolio__img" src="./images/Dwarf.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/dragon.jpg" data-lightbox="models" data-title="2d-Dragon">
+                        <img class="portfolio__img" src="./images/dragon.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/aztec.jpg" data-lightbox="models" data-title="2d-aztec">
+                        <img class="portfolio__img" src="./images/aztec.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/elf.jpg" data-lightbox="models" data-title="2d-elf">
+                        <img class="portfolio__img" src="./images/elf.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/mechanic-2d.jpg" data-lightbox="models" data-title="2d-mechanic">
+                        <img class="portfolio__img" src="./images/mechanic-2d.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/tomoe.png" data-lightbox="models" data-title="2d-tomoe">
+                        <img class="portfolio__img" src="./images/tomoe.png" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/Alice.png" data-lightbox="models" data-title="2d-Alice">
+                        <img class="portfolio__img" src="./images/Alice.png" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/Agirl.jpg" data-lightbox="models" data-title="2d-Agirl">
+                        <img class="portfolio__img" src="./images/Agirl.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/man.jpg" data-lightbox="models" data-title="2d-man">
+                        <img class="portfolio__img" src="./images/man.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/mandalor.jpg" data-lightbox="models" data-title="2d-mandalorian">
+                        <img class="portfolio__img" src="./images/mandalor.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/grogy.jpg" data-lightbox="models" data-title="2d-grogu">
+                        <img class="portfolio__img" src="./images/grogy.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/dw.jpg" data-lightbox="models" data-title="2d-deadpool&wolverine">
+                        <img class="portfolio__img" src="./images/dw.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/gofts.jpg" data-lightbox="models" data-title="2d-Mask">
+                        <img class="portfolio__img" src="./images/gofts.jpg" alt="#">
+                    </a>
+                </div>
+            </div>
+
+            <div class="title" style="margin-top:80px;">
+                <h2>Customization and painting Works</h2>
+            </div>
+            <div class="work__gallery">
+                <div class="work__gallery-card">
+                    <a href="./images/custom/picture-1.jpg" data-lightbox="models" data-title="Spider-Punk">
+                        <img class="portfolio__img" src="./images/custom/picture-1.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/custom/picture-2.jpg" data-lightbox="models" data-title="The Queen">
+                        <img class="portfolio__img" src="./images/custom/picture-2.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/custom/jacket-1.png" data-lightbox="models" data-title="Mask-ghost of tsushima">
+                        <img class="portfolio__img" src="./images/custom/jacket-1.png" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/custom/t-shirt-1.png" data-lightbox="models" data-title="Deadpool Wolverine">
+                        <img class="portfolio__img" src="./images/custom/t-shirt-1.png" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/custom/t-shirt-2.jpg" data-lightbox="models" data-title="Grogu">
+                        <img class="portfolio__img" src="./images/custom/t-shirt-2.jpg" alt="#">
+                    </a>
+                </div>
+                <div class="work__gallery-card">
+                    <a href="./images/custom/t-shirt-3.jpg" data-lightbox="models" data-title="Mandalorian">
+                        <img class="portfolio__img" src="./images/custom/t-shirt-3.jpg" alt="#">
+                    </a>
+                </div>
+
+            </div>
     </section>
 
     <div class="copyright">
