--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
 
             <div class="title" style="margin-top:80px;">
-                <h2>Customization and painting Works</h2>
+                <h2>Customization and Painting Works</h2>
             </div>
             <div class="work__gallery">
                 <div class="work__gallery-card">
